--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="intro-page">
-    <h1>Happy Birthday! 🎉</h1>
+    <h1>Happy Birthday Ishant! 🎉❤️</h1>
     <p>Hope you have an amazing day! May ur day be as bright as u are!!🎂</p>
     <audio id="birthdaySong" >
   <source src="happy_birthday.mp3.mp3" type="audio/mp3">
